--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "canvas": "^2.8.0",
     "gif-encoder-2": "^1.0.5",
-    "sha1": "^1.1.1"
+    "piscina": "^3.2.0",
+    "sha1": "^1.1.1",
+    "sharp": "^0.30.7"
   }
 }
